Fix T80012: Bevel Shader node Samples value has too low hardcoded limit

Up the hard limit, keep the UI range max at 16

Maniphest Tasks: T80012

Differential Revision: https://developer.blender.org/D8701